fix X scrolling on iphone

--- a/css/main-page-blocks/activities.css
+++ b/css/main-page-blocks/activities.css
@@ -4,6 +4,7 @@
 
 .activities__container {
     overflow: visible;
+    -webkit-overflow-scrolling: auto;
 }
 
 .activities__title {
